# Diploma

./: .gitignore  CMakeLists.txt  Diploma.sln  Diploma.vcxproj  Diploma.vcxproj.filters
GeneratedFiles/: ui_main_window.h
forms/: main_window.ui
models/: arrow blendered.mtl  athlete.dae  barbell blendered.dae  barbell blendered.mtl  barbell empty blendered.mtl  barbell.mtl  bobby.dae  cmu.dae  cmu_test.dae  cmu_up.dae  trainer.dae
models/textures/: Thumbs.db
res/assimp/: Assimp.props
res/assimp/include/assimp/: camera.h  postprocess.h
res/assimp/lib/: IrrXML.lib  assimp-vc140-mt.lib  zlibstatic.lib
res/assimp/lib/pkgconfig/: assimp.pc
res/freeglut/: FreeGLUT.props
res/freeglut/lib/: freeglutd.exp
res/glew/: GLEW.props
res/imagemagick/: ImageMagick.props
res/imagemagick/include/MagickCore/: magick-baseconfig.h  version.h
res/imagemagick/lib/: CORE_RL_Magick++_.lib  CORE_RL_MagickCore_.lib  CORE_RL_MagickWand_.lib
res/kinect/: Kinect.props
res/kinect/include/: Kinect.INPC.h  Kinect.h
res/opensim/: OpenSim.props
res/opensim/lib/: SimTKcommon.lib  SimTKcommon_d.lib  SimTKmath.lib  SimTKmath_d.lib  SimTKsimbody.lib  SimTKsimbody_d.lib  osimActuators.lib  osimActuators_d.lib  osimAnalyses.lib  osimAnalyses_d.lib  osimCommon.lib  osimCommon_d.lib  osimLepton.lib  osimLepton_d.lib  osimSimulation.lib  osimSimulation_d.lib  osimTools.lib  osimTools_d.lib
res/qt/: qt.props
res/qt/include/QtCore/: qglobalstatic.h
res/qt/lib/: Qt5Core.prl  Qt5Cored.lib  Qt5Gui.prl  Qt5Widgets.prl  Qt5Widgetsd.lib  libEGLd.lib
shaders/: axes.vs  lighting.frag  lighting.fs  lighting.vert  lighting.vs  plane.frag  plane.vert  plane.vs  simple.frag  skinning - Copy (2).fs  skinning - Copy (2).vs  skinning.fs  skinning.vs  test.fs  test.vs
src/: camera.cpp  camera.h  ksensor.cpp  ksensor.h  kskeleton.cpp  kskeleton.h  main.cpp  main_widget.cpp  main_widget.h  main_window.cpp  main_window.h  math_3d.cpp  math_3d.h  opensim_model.cpp  opensim_model.h  pipeline.cpp  pipeline.h  sensor.cpp  sensor.h  skeleton.cpp  skeleton.h  skinned_mesh.cpp  skinned_mesh.h  skinning_technique.cpp  skinning_technique.h  technique.cpp  technique.h  texture.cpp  texture.h  util.cpp  util.h
